add videos page

--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ navbar-links:
   About the BiclustGUI: "aboutbiclustgui"
   Documentation:
     - Presentations: "presentations"
+    - Videos: "videos"
     - Examples: "examples"
     - Blog Archive: "blogarchive"
     - Blogroll: "blogroll"
