--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,7 +52,8 @@ importMethodsFrom(iBBiG, "plot", "show","summary", "RowScorexNumber", "Clustersc
     #"info",
     "analyzeClust","JIdist")
 
-import(fabia,superbiclust,BcDiag,BicARE,rqubic,s4vd,BiBitR)
+import(fabia,superbiclust,BcDiag,BicARE,s4vd,BiBitR)
+#import(rqubic)
 #import(isa2)
 
 
